--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,5 @@
     "extends": [
         "config:base"
     ],
-    "dependencyDashboardApproval": true,
-    "rangeStrategy": "update-lockfile"
+    "dependencyDashboardApproval": true
 }
