--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,8 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
-        "config:base"
+        "config:base",
+        ":semanticCommitScopeDisabled"
     ],
-    "packageRules": [
-        {
-            "matchPackagePatterns": ["*"],
-            "semanticCommitScope": null
-        }
-     ],
     "dependencyDashboardApproval": true
 }
